# desktop-timetable

./: .gitignore  Caddyfile  Cargo.toml  Dioxus.toml  Dockerfile  tailwind.config.js
.fleet/: run.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Cargo.toml  Dioxus.toml  Dockerfile  nginx.conf
frontend/src/: main.rs
frontend/src/components/timetable/: appointments.rs  days.rs  lessons.rs  mod.rs  times.rs
frontend/src/routes/: auth.rs  dashboard.rs  home.rs  login.rs  mod.rs  not_found.rs
frontend/src/types/: timetable.rs
src/: app.rs  lib.rs  main.rs
src/components/: mod.rs  timetable.rs
src/components/timetable/: appointments.rs  days.rs  lessons.rs  mod.rs  times.rs
src/routes/: dashboard.rs  home.rs  login.rs  not_found.rs
src/types/: timetable.rs
style/: tailwind-output.css
