[package]
name = "desktop_timetable"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
homeworker = { git = "https://github.com/MaximilianHausen/homeworker-api-client.git" }

leptos = { version = "0.1.3", default-features = false, features = ["serde"] }
leptos_meta = { version = "0.1.3" }
leptos_router = { version = "0.1.3" }

tokio = { version = "1.24", features = ["macros"], optional = true  }
tower = { version = "0.4", optional = true  }
tower-http = { version = "0.3", features = ["fs"], optional = true  }
axum = { version = "0.6", optional = true }
axum-extra = { version = "0.4", features = ["cookie-private"], optional = true }
leptos_axum = { version = "0.1.3", optional = true }
http = { version = "0.2", optional = true }
time = { version = "0.3", optional = true }

wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }

log = "0.4"
simple_logger = "4"
console_log = "0.2"
console_error_panic_hook = "0.1"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "dep:http",
  "dep:time",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "desktop_timetable"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/tailwind-output.css"
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-address = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

bin-features = ["ssr"]
lib-features = ["hydrate"]
