[package]
name = "desktop_timetable"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
homeworker = { git = "https://github.com/MaximilianHausen/homeworker-api-client.git" }

leptos = { version = "0.1.3", default-features = false, features = ["serde"] }
leptos_meta = { version = "0.1.3" }
leptos_router = { version = "0.1.3" }

tokio = { version = "1.25.0", features = ["macros"], optional = true  }
tower = { version ="0.4.13", optional = true  }
tower-http = { version = "0.3.5", features = ["fs"], optional = true  }
axum = { version = "0.6.7", optional = true }
axum-extra = { version = "0.5.0", features = ["cookie-private"], optional = true }
leptos_axum = { version = "0.1.3", optional = true }
http = { version ="0.2.9", optional = true }
time = { version = "0.3.19", optional = true }

wasm-bindgen = "0.2.84"
serde = { version = "1.0.152", features = ["derive"] }

log = "0.4.17"
simple_logger = "4.0.0"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "dep:http",
  "dep:time",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
style-file = "style/tailwind-output.css"
assets-dir = "public"

bin-features = ["ssr"]
lib-features = ["hydrate"]
