[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["cookie"] }
tokio = { version = "1.21.1", features = ["full"] }

homeworker-api-client = { git = "https://github.com/MaximilianHausen/homeworker-api-client.git" }
rand = "0.8.5"
reqwest = "0.11.12"
serde_json = "1.0.85"
serde = { version = "1.0.139", features = ["derive"] }
