[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["cookie-private"] }
tokio = { version = "1.21.1", features = ["full"] }

homeworker-api-client = { git = "https://github.com/MaximilianHausen/homeworker-api-client.git" }
