[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
axum-extra = { version = "0.4", features = ["cookie-private"] }
tokio = { version = "1.23", features = ["full"] }
time = "0.3.17"

homeworker = { git = "https://github.com/MaximilianHausen/homeworker-api-client.git" }
reqwest = "0.11"
