[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }

gloo-storage = "0.2.2"
homeworker = { git = "https://github.com/MaximilianHausen/homeworker-api-client.git" }
reqwest = "0.11.12"

log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
