[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }

homeworker = { git = "https://github.com/MaximilianHausen/homeworker-api-client.git" }
reqwest = "0.11"

gloo-storage = "0.2.2"
time = "0.3.17"

log = "0.4"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
